# cricket_prefect

./: .gitignore  README.md  pyproject.toml
cricket/: main.py
cricket/conf/: catalog.py  conf.py  params.py  schema.py
cricket/data/01_dump/json/: README.txt
cricket/data/01_dump/track/: new_dump_files.parquet
cricket/data/03_helpers/: people_raw_data.csv  team_league_map.csv  team_name_correction.csv
cricket/data/04_preprocessed/: match_info.parquet  registry.parquet
cricket/functions/: functions.py  utility_functions.py
cricket/notebooks/: 01_test_extract_event_data.ipynb
cricket/pipelines/: __init__.py
cricket/pipelines/p01_ingest/: __init__.py  ingest.py
cricket/pipelines/p02_extract/: __init__.py  extract_deliveries.py  extract_match_info.py  extract_registry.py
cricket/pipelines/p03_process/: __init__.py  create_cricket_dataset.py  update_raw_folder.py
