[tool.poetry]
name = "cricket"
version = "0.1.0"
description = ""
authors = ["vivekt22 <vivek-thomas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.16.0"
duckdb = "^1.1.3"
pyarrow = "^18.1.0"
prefect = {extras = ["ray"], version = "^3.1.5"}
numpy = "^2.1.3"
requests = "^2.32.3"
orjson = "^3.10.12"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
prefect-dask = "^0.3.2"
bokeh = "^3.6.2"
pathos = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main-run = "cricket.main:main"